src/Analizador_ply/PlyParser.java
/* Generated By:JavaCC: Do not edit this line. PlyParser.java */
package Analizador_ply;

import java.io.FileNotFoundException;
import arbolply.*;


public class PlyParser implements PlyParserConstants {

  public static void main(String args[]) throws FileNotFoundException{
    PlyParser parser;
    System.out.println("Reading from standard input. . .");
    parser = new PlyParser(new java.io.FileInputStream("ply.dat"));
    try {
      INode root = parser.Inicio();
      System.out.println("Parsed successfully.");
    }
    catch (ParseException e) {
      System.out.println(e.getMessage());
      System.out.println("Encountered errors during parse.");
    }
  }

  final public Inicio Inicio() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  valor n2 = null;
  NodeListOptional n3 = new NodeListOptional();
  NodeSequence n4 = null;
  NodeToken n5 = null;
  Token n6 = null;
  valor n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  NodeOptional n10 = new NodeOptional();
  NodeToken n11 = null;
  Token n12 = null;
    n1 = jj_consume_token(K_ciz);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = valor();
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case K_coma:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      n4 = new NodeSequence(2);
      n6 = jj_consume_token(K_coma);
      n5 = JTBToolkit.makeNodeToken(n6);
      n4.addNode(n5);
      n7 = valor();
      n4.addNode(n7);
      n3.addNode(n4);
    }
    n3.nodes.trimToSize();
    n9 = jj_consume_token(K_cder);
    n8 = JTBToolkit.makeNodeToken(n9);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case 0:
      n12 = jj_consume_token(0);
      n12.beginColumn++;
      n12.endColumn++;
      { n11 = JTBToolkit.makeNodeToken(n12); }
      n10.addNode(n11);
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    {if (true) return new Inicio(n0, n2, n3, n8, n10);}
    throw new Error("Missing return statement in function");
  }

  final public valor valor() throws ParseException {
  // --- JTB generated node declarations ---
  NodeToken n0 = null;
  Token n1 = null;
  operador n2 = null;
  NodeChoice n3 = null;
  NodeToken n4 = null;
  Token n5 = null;
  NodeToken n6 = null;
  Token n7 = null;
  NodeToken n8 = null;
  Token n9 = null;
  Inicio n10 = null;
    n1 = jj_consume_token(CADENA_LITERAL);
    n0 = JTBToolkit.makeNodeToken(n1);
    n2 = operador();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CADENA_LITERAL:
      n5 = jj_consume_token(CADENA_LITERAL);
        n4 = JTBToolkit.makeNodeToken(n5);
        n3 = new NodeChoice(n4, 0, 4);
      break;
    case INTEGER:
      n7 = jj_consume_token(INTEGER);
        n6 = JTBToolkit.makeNodeToken(n7);
        n3 = new NodeChoice(n6, 1, 4);
      break;
    case S_IDENTIFICADOR:
      n9 = jj_consume_token(S_IDENTIFICADOR);
        n8 = JTBToolkit.makeNodeToken(n9);
        n3 = new NodeChoice(n8, 2, 4);
      break;
    case K_ciz:
      n10 = Inicio();
        n3 = new NodeChoice(n10, 3, 4);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new valor(n0, n2, n3);}
    throw new Error("Missing return statement in function");
  }

  final public operador operador() throws ParseException {
  // --- JTB generated node declarations ---
  NodeChoice n0 = null;
  NodeToken n1 = null;
  Token n2 = null;
  NodeToken n3 = null;
  Token n4 = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case K_dospuntos:
      n2 = jj_consume_token(K_dospuntos);
      n1 = JTBToolkit.makeNodeToken(n2);
      n0 = new NodeChoice(n1, 0, 2);
      break;
    case K_igm:
      n4 = jj_consume_token(K_igm);
      n3 = JTBToolkit.makeNodeToken(n4);
      n0 = new NodeChoice(n3, 1, 2);
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return new operador(n0);}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public PlyParserTokenManager token_source;
  JavaCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[4];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40000,0x1,0x2481000,0x220000,};
   }

  /** Constructor with InputStream. */
  public PlyParser(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public PlyParser(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new JavaCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new PlyParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public PlyParser(java.io.Reader stream) {
    jj_input_stream = new JavaCharStream(stream, 1, 1);
    token_source = new PlyParserTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public PlyParser(PlyParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(PlyParserTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 4; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[26];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 4; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 26; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}

class JTBToolkit {

  static NodeToken makeNodeToken(final Token t) {
    return new NodeToken(t.image.intern(), t.kind, t.beginLine, t.beginColumn, t.endLine, t.endColumn);
  }
}
